<resources>
    <string name="app_name" translatable="false">Clash of Bugs</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="loses">loses</string>
    <string name="score">score</string>
    <string name="wins">wins</string>
    <string name="bug_vs_random_bug">Bug vs. Random Bug</string>
    <string name="bug_vs_cpu_bug">Bug vs. CPU Bug</string>
    <string name="bug_vs_bug">Bug vs. Bug</string>
    <string name="sign_up">Sign up</string>
    <string name="change_profile">change profile</string>
    <string name="create_game">create game</string>
    <string name="join_the_game">join the game</string>
    <string name="game_modes">Game mode</string>
    <string name="sign_up_link"><u>Sign Up</u></string>
    <string name="error_login_pass_undefined">enter login/password</string>
    <string name="error_password_undefined">passwords not equal</string>
    <string name="game_name">name of game</string>
    <string name="game_name_error">enter name of the game</string>
    <string name="auto_set_up_bugs">auto</string>
    <string name="accept_bug">accept bug</string>
    <string name="extra_bugs_on_field">delete excess bugs</string>
    <string name="not_enougth_bugs_on_field">add bugs</string>
    <string name="clean_field">clean field</string>
    <string name="player_1">player 1</string>
    <string name="player_2">player 2</string>
    <string name="android">android</string>
</resources>
