<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".credentials.profile.ProfileFragment">


    <TextView
        android:id="@+id/tvWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bones"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/wins"
        android:textColor="#FCE203"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/tvScore"
        app:layout_constraintStart_toStartOf="@+id/tvScore"
        app:layout_constraintTop_toBottomOf="@+id/tvScore" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bones"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/score"
        android:textColor="#FCE203"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvLoses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bones"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/loses"
        android:textColor="#FCE203"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/tvWins"
        app:layout_constraintStart_toStartOf="@+id/tvWins"
        app:layout_constraintTop_toBottomOf="@+id/tvWins" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bones"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/name"
        android:textColor="#FCE203"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bBugVsRandomBug"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_big_grey"
        android:fontFamily="@font/bones"
        android:onClick="gameModeBtn"
        android:text="@string/game_modes"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/score_bug"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/avatarka"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/bChangeProfile"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_big_grey"
        android:text="@string/change_profile"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="changeProfile"
        android:fontFamily="@font/bones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarka" />


</androidx.constraintlayout.widget.ConstraintLayout>