<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_empty"
    tools:context=".registration.SignInFragment">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:background="@drawable/bugs_heads"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bSigInBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_big_grey"
        android:fontFamily="@font/bones"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/tvSignUpBtn"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:fontFamily="@font/bones"
        android:gravity="center"
        android:text="@string/sign_up_link"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSigInBtn" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:background="@drawable/btn_big_grey"
        android:ems="10"
        android:fontFamily="@font/bones"
        android:hint="@string/login"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="20dp"
        android:background="@drawable/btn_big_grey"
        android:ems="10"
        android:fontFamily="@font/bones"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />
</androidx.constraintlayout.widget.ConstraintLayout>