<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_empty"
    tools:context=".Profile">

    <Button
        android:id="@+id/bHome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_home_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bones"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/wins"
        android:textColor="#FCE203"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/tvScore"
        app:layout_constraintStart_toStartOf="@+id/tvScore"
        app:layout_constraintTop_toBottomOf="@+id/tvScore" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bones"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/score"
        android:textColor="#FCE203"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvLoses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bones"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/loses"
        android:textColor="#FCE203"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/tvWins"
        app:layout_constraintStart_toStartOf="@+id/tvWins"
        app:layout_constraintTop_toBottomOf="@+id/tvWins" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="220dp"
        android:fontFamily="@font/bones"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/name"
        android:textColor="#FCE203"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:background="@drawable/bug_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>