<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".credentials.auth.SignInFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:background="@drawable/bugs_heads"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bCreateGame"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_big_grey"
                android:fontFamily="@font/bones"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/create_game" />
            <Button
                android:id="@+id/bJoinGame"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/btn_big_grey"
                android:fontFamily="@font/bones"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/join_the_game" />


        </LinearLayout>

        <FrameLayout
            android:id="@+id/flBtnContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#cccccccc"
            android:visibility="gone"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>
    </FrameLayout>

    <EditText
        android:id="@+id/gameName"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/btn_big_grey"
        android:ems="10"
        android:fontFamily="@font/bones"
        android:hint="@string/game_name"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>